Alignement de la grid, fix calendar header

--- a/client/src/components/Calendar.css
+++ b/client/src/components/Calendar.css
@@ -482,6 +482,11 @@
 	flex-shrink: 0;
 }
 
+.grid-spacers {
+	width: 60px;
+	flex-shrink: 0;
+}
+
 .grid-header-cell {
 	flex: 1;
 	display: flex;
@@ -1198,7 +1203,12 @@
 	}
 
 	.multi-day-col {
+		padding: 0 1px;
 		min-width: 50px;
+	}
+
+	.grid-spacers {
+		width: 42px;
 	}
 
 	.time-sidebar {
@@ -1223,6 +1233,7 @@
 		gap: 0.5rem;
 		flex-direction: column;
 		gap: 10px;
+		flex-wrap: nowrap;
 		align-items: stretch;
 	}
 
